--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -155,12 +155,13 @@ h5 {
 }
 
 small,
-.text_small {
+.text-small {
     font-size: 0.8rem;
 }
 h1 {
     margin-top: 0;
     font-size: 3.052rem;
+    line-height: 1.1;
 }
 h2 {
     font-size: 2.441rem;
